# LibCMakeExamples

Eigen-Example/: CMakeLists.txt  main.cpp
EigenAD-Example/: CMakeLists.txt  main.cpp
Irrlicht-Example/: CMakeLists.txt  main.cpp
Nlopt-Example/: CMakeLists.txt  main.cpp
OpenMP-Example/: CMakeLists.txt  openmp-example.cpp  openmp-example2.cpp
Pytorch-Example/: CMakeLists.txt  main.cpp
Qhull-Example/: 3DConvexHull.cpp  4DConvexHull.cpp  CMakeLists.txt  dDComputeMinDistance.cpp
autodiff-Example/: CMakeLists.txt  main.cpp  main_reverse.cpp
cppAD-Example/: CMakeLists.txt  main.cpp
